# TorpedoRay

./: .gitignore  CMakeLists.txt
examples/: example1.c
headers/: camera.h  color.h  hit_record.h  hittable.h  hittable_list.h  interval.h  qrtc_internal.h  ray.h  sphere.h  vec3.h
include/: qrtc.h
src/: camera.c  color.c  hit_record.c  hittable.c  hittable_list.c  sphere.c
